--- a/special.html
+++ b/special.html
@@ -72,7 +72,7 @@
       </section>
       <hr class="line">
       <section class="special special-obj1">
-        <img src="images/pika.png" width="50%" height="50%" alt="">
+      <iframe src="https://drive.google.com/file/d/1r7mho_feaeG6hv_CR2K0Ji7ap43Ij0vo/preview" width="1280" height="960"></iframe>
           <hr class="line">
       </section>
       <section class="exp2 special-temp1">
