--- a/pensieve.html
+++ b/pensieve.html
@@ -627,7 +627,7 @@ Apun ready hai.</p>
 
       <div class="col-sm-4">
         <div class="card card2 " style="width: 25rem;">
-          <img class="" src="images/spe-16-msg.jpg"style="height:40rem;" alt="Card image cap">
+          <img class="" src="images/vcc.jpg"style="height:40rem;" alt="Card image cap">
 
         </div>
 
