--- a/private.html
+++ b/private.html
@@ -17,10 +17,10 @@
       <img class="letter2 letter" src="images/letter2.jpg"style="display:none;" alt="">
         <img class="letter3 letter" src="images/letter3.jpg"style="display:none;" alt="">
           <img class="letter4 letter" src="images/letter4.jpg" style="display:none;"alt="">
-          <button class="next-but1 inp-but"type="button" name="button">1</button>
-          <button class="next-but2  inp-but"type="button" name="button">2</button>
-          <button class="next-but3  inp-but"type="button" name="button">3</button>
-          <button class="next-but4  inp-but"type="button" name="button">4</button>
+          <button class=" inp-but1"type="button" name="button">1</button>
+          <button class="  inp-but2"type="button" name="button">2</button>
+          <button class="  inp-but3"type="button" name="button">3</button>
+          <button class="  inp-but4"type="button" name="button">4</button>
     <img class="pri-bg" src="images/ep.png" alt="">
     <img class="pri-bg" src="images/hpbg2.jpg" alt="">
     <hr class="line2">
