--- a/pensieve.html
+++ b/pensieve.html
@@ -40,7 +40,7 @@
             <a class="nav-link bg-light text-dark" href="pensieve.html">Pensieve</a>
           </li>
           <li class="navbar-item hptheme">
-            <a class="nav-link" href="Hedwig.html">Hedwig</a>
+            <a class="nav-link" href="hedwig.html">Hedwig</a>
           </li>
           <li class="navbar-item hptheme">
             <a class="nav-link" href="lady.html">Fat Lady</a>
